Update testimonials and footer with specific names

--- a/NomanSaeed/index.html
+++ b/NomanSaeed/index.html
@@ -168,8 +168,8 @@
         <div class="container">
             <h2 class="section-title text-center mb-4">Testimonials</h2>
             <div class="glass-card p-4">
-                <p>“Amazing work! Highly recommended.” – Client Name</p>
-                <p>“Very professional and creative developer.” – Client Name</p>
+                <p>“Amazing work! Highly recommended.” – Client Name: Sasha</p>
+                <p>“Very professional and creative developer.” – Client Name: Tener</p>
             </div>
         </div>
     </section>
@@ -182,7 +182,7 @@
 
                 <form>
                     <div class="mb-3">
-                        <label class="form-label">Your Name</label>
+                        <label class="form-label">Noman Saeed</label>
                         <input class="form-control glass-input" type="text">
                     </div>
 
@@ -204,7 +204,7 @@
 
     <!-- FOOTER -->
     <footer class="footer text-center py-3">
-        <p>© 2025 Your Name | All Rights Reserved</p>
+        <p>© 2025 Noman Saeed | All Rights Reserved</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
