Add favicon and WhatsApp button with animations

--- a/NomanSaeed/index.html
+++ b/NomanSaeed/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noman Saeed</title>
+    <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAQAAAC1+jfqAAAARUlEQVR4AWNQ0tLS/0YfBQYGBgYGBgaGnfxDAyMjo4dOjU1NUzMDAwMDAw+KgoKCluYmF8BiJAQvojLD+AmHkGIwiNQjMNIDbDEmBngM8+vknKn3SxCAAAAABJRU5ErkJggg==" type="image/png" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -210,7 +211,11 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- WhatsApp Button -->
+    <div id="whatsapp-button" title="Chat on WhatsApp">
+        <img src="assets/images/whatsApp.avif" alt="WhatsApp" />
+    </div>
+
     <script src="script.js"></script>
 </body>
-
 </html>
