--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noman Saeed</title>
-    <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAQAAAC1+jfqAAAARUlEQVR4AWNQ0tLS/0YfBQYGBgYGBgaGnfxDAyMjo4dOjU1NUzMDAwMDAw+KgoKCluYmF8BiJAQvojLD+AmHkGIwiNQjMNIDbDEmBngM8+vknKn3SxCAAAAABJRU5ErkJggg==" type="image/png" />
+    <link rel="icon"
+        href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAQAAAC1+jfqAAAARUlEQVR4AWNQ0tLS/0YfBQYGBgYGBgaGnfxDAyMjo4dOjU1NUzMDAwMDAw+KgoKCluYmF8BiJAQvojLD+AmHkGIwiNQjMNIDbDEmBngM8+vknKn3SxCAAAAABJRU5ErkJggg=="
+        type="image/png" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -44,6 +46,31 @@
         </div>
     </nav>
 
+    <!-- LOGIN SECTION -->
+    <section id="loginForm" class="section" style="padding-top : 120px; min-height: 100vh; display: flex; align-items: center; justify-content: center;">
+        <div class="glass-card p-5" style="max-width: 400px; width: 100%;">
+            <h2 class="section-title mb-4 text-center">Admin</h2>
+            <form>
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username or Email</label>
+                    <input type="text" class="form-control glass-input" id="username"
+                        placeholder="Enter your username or email" required />
+                </div>
+
+                <div class="mb-4">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control glass-input" id="password"
+                        placeholder="Enter your password" required />
+                </div>
+
+                <div id="login-error" class="text-danger mb-3" style="display: none;"></div>
+
+                <button type="submit" class="btn glass-btn w-100">Login</button>
+            </form>
+        </div>
+    </section>
+
+    <div class="container-fluid d-none" id="mainContent">
     <!-- HERO SECTION -->
     <section id="hero" class="hero-section">
         <div class="container text-center">
@@ -202,7 +229,7 @@
             </div>
         </div>
     </section>
-
+    </div>
     <!-- FOOTER -->
     <footer class="footer text-center py-3">
         <p>© 2025 Noman Saeed | All Rights Reserved</p>
@@ -218,4 +245,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
