Update login section padding and enhance smooth scrolling behavior

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </nav>
 
     <!-- LOGIN SECTION -->
-    <section id="loginForm" class="section" style="padding-top : 120px; min-height: 100vh; display: flex; align-items: center; justify-content: center;">
+    <section id="loginForm" class="section" style="padding-top : 160px; min-height: 100vh; display: flex; align-items: center; justify-content: center;">
         <div class="glass-card p-5" style="max-width: 400px; width: 100%;">
             <h2 class="section-title mb-4 text-center">Admin</h2>
             <form>
@@ -150,7 +150,7 @@
         <div class="container">
             <div class="glass-card p-4">
                 <h2 class="section-title">Experience</h2>
-                <p>- Job role / Company / Years</p>
+                <p>- FrontEnd Developer / syntixsolutions.com / 2025 - Present</p>
                 <p>- Job role / Company / Years</p>
             </div>
         </div>
@@ -161,8 +161,7 @@
         <div class="container">
             <div class="glass-card p-4">
                 <h2 class="section-title">Education</h2>
-                <p>- Degree / Institute / Year</p>
-                <p>- Course / Institute / Year</p>
+                <p>- BSCS / University of Sargodha / 2025 - 2029</p>
             </div>
         </div>
     </section>
