Replace WhatsApp image format, update project description, and implement nav link disabling/enabling on login

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="col-md-4">
                     <div class="glass-card p-3">
                         <h5>Project 1</h5>
-                        <p>Short description...</p>
+                        <p>Onsite </p>
                         <a href="#" class="glass-btn-small">View</a>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
 
                 <form>
                     <div class="mb-3">
-                        <label class="form-label">Noman Saeed</label>
+                        <label class="form-label">Your Name</label>
                         <input class="form-control glass-input" type="text">
                     </div>
 
@@ -242,7 +242,7 @@
 
     <!-- WhatsApp Button -->
     <div id="whatsapp-button" title="Chat on WhatsApp">
-        <img src="assets/images/whatsApp.avif" alt="WhatsApp" />
+        <img src="assets/images/whatsApp.png" alt="WhatsApp" />
     </div>
 
     <script src="script.js"></script>
